# symbolic_regression.rs

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .rustfmt.toml  CONTRIBUTORS.md  Cargo.toml  README.md  codecov.yml  release-please-config.json
.github/scripts/: bencher_to_custom_bench_json.py  check-workspace-deps.sh
.github/workflows/: benchmarks.yml  ci-dynamic-expressions.yml  ci-symbolic-regression.yml  ci-web.yml  publish-crates.yml  release-please.yml  trigger-astroautomata-site.yml
dynamic_expressions/: CHANGELOG.md  Cargo.toml
dynamic_expressions/benches/: eval.rs
dynamic_expressions/src/: compile.rs  dispatch.rs  evaluate.rs  evaluate_derivative.rs  expression.rs  expression_algebra.rs  lib.rs  node_utils.rs  operator_enum.rs  operators.rs  proptest_utils.rs  simplify.rs  strings.rs  subtree_caching.rs  traits.rs  utils.rs
dynamic_expressions/src/algebra/: mod.rs
dynamic_expressions/src/math/: macros.rs  mod.rs
dynamic_expressions/src/operators/: builtin.rs  mod.rs  names.rs
dynamic_expressions/src/operators/scalar/: kernels.rs  macros.rs  mod.rs  types.rs
dynamic_expressions/tests/: subtree_cache_proptests.rs  test_algebra_and_strings_coverage.rs  test_algebra_const_shift_and_meta.rs  test_branch_coverage.rs  test_builtin_op_panics.rs  test_builtin_ops_derivatives.rs  test_compile_plan_invariants.rs  test_const_generic_instantiations.rs  test_constants_traits_and_roots.rs  test_define_scalar_ops_coverage.rs  test_diff.rs  test_early_exit_instruction_paths.rs  test_error_paths.rs  test_eval.rs  test_expression_algebra.rs  test_finite_check_post_loop.rs  test_grad.rs  test_grad_finite_diff_proptest.rs  test_math_wrappers_coverage.rs  test_more_coverage.rs  test_nary.rs  test_operator_registry.rs  test_ops_coverage.rs  test_opset_macro_panics.rs  test_scalar_helpers_coverage.rs  test_simplification.rs  test_strings.rs  test_strings_extra_coverage.rs  test_subtree_cache_edge_cases.rs  test_tree_utils.rs
dynamic_expressions/tests/common/: mod.rs
symbolic_regression/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
symbolic_regression/benches/: optim.rs
symbolic_regression/examples/: example.rs
symbolic_regression/src/: adaptive_parsimony.rs  bench.rs  check_constraints.rs  complexity.rs  constant_optimization.rs  dataset.rs  hall_of_fame.rs  lib.rs  loss.rs  loss_functions.rs  member.rs  migration.rs  mutate.rs  mutation_functions.rs  operator_library.rs  operators.rs  optim.rs  options.rs  pop_member.rs  population.rs  prelude.rs  progress_bars.rs  random.rs  regularized_evolution.rs  search_utils.rs  selection.rs  single_iteration.rs  stop_controller.rs  warmup.rs
symbolic_regression/src/cli/: args.rs  ops.rs  options.rs  output.rs
symbolic_regression/src/cli/io/: columns.rs  csv.rs  mod.rs  table.rs  xlsx.rs
symbolic_regression/src/mutate/: core.rs
symbolic_regression/src/optim/: bfgs.rs  linalg.rs  line_search.rs  mod.rs  options.rs  tests.rs
symbolic_regression/src/search/: migration.rs  mod.rs  regularized_evolution.rs  single_iteration.rs
symbolic_regression/src/tests/: mod.rs  test_batching_constraints_complexity.rs  test_compress_constants.rs  test_constant_optimization_birth_reset.rs  test_cost_normalization.rs  test_count_depth_proptests.rs  test_equation_search_runs.rs  test_frequency_in_tournament.rs  test_loss.rs  test_mutate_constant_regressions.rs  test_mutation_regressions.rs  test_next_generation_retry_and_skip.rs  test_population_replacement.rs  test_rotate_tree_proptests.rs  test_swap_operands_arity_gt2.rs  test_termination_max_evals.rs
symbolic_regression/tests/: test_custom_operator_search.rs  test_timeout.rs
web/ui/: package.json  playwright.config.ts  vite.config.ts
web/ui/scripts/: build_wasm.sh
web/ui/src/: style.css
web/ui/src/app/: App.tsx
web/ui/src/app/panes/: EnterData.test.tsx  EnterData.tsx  ModelingTask.tsx  SearchSolutions.test.tsx  SearchSolutions.tsx
web/ui/src/app/panes/searchSolutions/: ControlsCard.tsx  FitPlot.tsx  MetricsTable.tsx  ParetoPlotCard.tsx  QuickStatsCard.tsx  SolutionsTableCard.tsx  plotUtils.ts  types.ts  useSearchController.ts
web/ui/src/state/: sessionStore.ts
web/ui/src/test/: setup.ts
web/ui/src/worker/: protocol.ts  srWorker.ts  srWorkerClient.ts
web/wasm/: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
web/wasm/.cargo/: config.toml
web/wasm/src/: lib.rs
