[package]
name = "dynamic_expressions"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Fast batched evaluation + forward-mode derivatives for symbolic expressions (Rust port of DynamicExpressions.jl)."
homepage = "https://github.com/MilesCranmer/symbolic_regression.rs"
repository = "https://github.com/MilesCranmer/symbolic_regression.rs"
readme = "README.md"
documentation = "https://docs.rs/dynamic_expressions"
keywords = ["symbolic", "expression", "autodiff", "symbolic-regression"]
categories = ["science", "mathematics", "algorithms"]
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE*",
    "src/**",
    "tests/**",
    "examples/**",
    "benches/**",
]

[dependencies]
num-traits = "0.2"
ndarray = "0.17"
paste = "1"

[dev-dependencies]
rstest = "0.26"
approx = "0.5"
criterion = "0.8"

[[bench]]
name = "eval"
harness = false
