[package]
name = "dynamic_expressions"
version = "0.9.1"
edition = "2021"
license = "Apache-2.0"
description = "Fast batched evaluation + forward-mode derivatives for symbolic expressions (Rust port of DynamicExpressions.jl)."
homepage = "https://github.com/astro-automata/symbolic_regression.rs"
repository = "https://github.com/astro-automata/symbolic_regression.rs"
readme = "README.md"
documentation = "https://docs.rs/dynamic_expressions"
keywords = ["symbolic", "expression", "autodiff", "symbolic-regression"]
categories = ["science", "mathematics", "algorithms"]
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE*",
    "src/**",
    "tests/**",
    "examples/**",
    "benches/**",
]

[dependencies]
num-traits = "0.2"
ndarray = "0.17"
paste = "1"
rustc-hash = "2.1.1"
proptest = { version = "1", optional = true }

[dev-dependencies]
rstest = "0.26"
approx = "0.5"
criterion = "0.7"
rand = { version = "0.9", default-features = false, features = ["std", "std_rng"] }
fastrand = "2.3"

[features]
proptest-utils = ["dep:proptest"]

[[bench]]
name = "eval"
harness = false
