[package]
name = "symbolic_regression"
version = "0.10.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust port of SymbolicRegression.jl."
homepage = "https://github.com/astro-automata/symbolic_regression.rs"
repository = "https://github.com/astro-automata/symbolic_regression.rs"
readme = "README.md"
documentation = "https://docs.rs/symbolic_regression"
keywords = ["symbolic-regression", "genetic-programming"]
categories = ["science", "mathematics", "algorithms"]
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE*",
    "src/**",
    "tests/**",
    "examples/**",
    "benches/**",
]

[dependencies]
dynamic_expressions = { version = "0.9.0", path = "../dynamic_expressions", default-features = false }
num-traits = "0.2"
fastrand = "2.3"
ndarray = "0.17"
indicatif = { version = "0.18", optional = true }
console = { version = "0.16", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
rayon = "1"

[features]
default = ["progress"]
progress = ["dep:indicatif", "dep:console"]
serde = ["dep:serde"]
serde_json = ["dep:serde_json", "serde"]
bench = []
[dev-dependencies]
criterion = "0.7"
proptest = "1"
rand = { version = "0.9", default-features = false, features = ["std", "std_rng"] }
rand_distr = "0.5"
dynamic_expressions = { path = "../dynamic_expressions", default-features = false, features = ["proptest-utils"] }
[[bench]]
name = "optim"
harness = false
required-features = ["bench"]
