[package]
name = "symbolic_regression_wasm"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
description = "WASM bindings for symbolic_regression (browser-friendly wrapper via wasm-bindgen)."
homepage = "https://github.com/astro-automata/symbolic_regression.rs"
repository = "https://github.com/astro-automata/symbolic_regression.rs"
readme = "README.md"
documentation = "https://docs.rs/symbolic_regression_wasm"
keywords = ["symbolic-regression", "wasm", "webassembly"]
categories = ["science", "mathematics", "algorithms", "wasm"]
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE*",
    "src/**",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

csv = "1"
ndarray = "0.17"
fastrand = "2.3"

symbolic_regression = { version = "0.10.0", path = "../../symbolic_regression", default-features = false, features = ["serde"] }
dynamic_expressions = { version = "0.9.0", path = "../../dynamic_expressions", default-features = false }

[features]
default = ["panic-hook"]
panic-hook = ["dep:console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen-rayon = "1"

[dev-dependencies]
serde_json = "1"
